--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,30 +1,25 @@
-name: generate animation
+name: Generate and Deploy Contribution Snake
 
 on:
-  # run automatically every 2 hours
   schedule:
-    - cron: "0 */2 * * *" 
-
-  # allows to manually run the job at any time
+    - cron: "0 */2 * * *"
   workflow_dispatch:
-
-  # run on every push on the master branch
   push:
     branches:
-    - master
-
-
+      - master
 
 jobs:
-  generate:
+  generate-and-deploy:
     permissions: 
       contents: write
     runs-on: ubuntu-latest
     timeout-minutes: 5
 
     steps:
-      # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
-      - name: generate github-contribution-grid-snake.svg
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Generate contribution snake SVGs
         uses: Platane/snk/svg-only@v3
         with:
           github_user_name: ${{ github.repository_owner }}
@@ -32,13 +27,17 @@ jobs:
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
 
+      - name: Upload SVGs as artifact (optional)
+        uses: actions/upload-artifact@v3
+        with:
+          name: generated-svgs
+          path: dist/*.svg
+        if: always()  # Upload even if later steps fail
 
-      # push the content of <build_dir> to a branch
-      # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
-      - name: push github-contribution-grid-snake.svg to the output branch
+      - name: Deploy to gh-pages branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
-          target_branch: output
+          target_branch: gh-pages
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
